--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </td>
 <td>
 <h1>Sample "Hello, World" Application</h1>
-<p>This is the home page for a sample application used to illustrate the
-source directory organization of a web application utilizing the principles
-outlined in the Application Developer's Guide.
+devient
+<h1>Bonjour, ceci est mon application Nom Prénom</h1>
 </td>
 </tr>
 </table>
