--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </td>
 <td>
 <h1>Sample "Hello, World" Application</h1>
-<h1>Bonjour, ceci est mon application Nom Prénom</h1>
+<h1>Bonjour, ceci est mon application Flahaut Axel</h1>
 </td>
 </tr>
 </table>
