--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <td>
 <h1>Sample "Hello, World" Application</h1>
 <h1>Bonjour, ceci est mon application Flahaut Axel</h1>
+<br> 
+<br>
+form method= POST 
 </td>
 </tr>
 </table>
