--- a/saisie.html
+++ b/saisie.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulaire d'Enregistrement d'Année</title>
+</head>
+<body>
+
+    <h2>Formulaire d'Enregistrement d'Année</h2>
+
+    <form action="reception.jsp" method="post">
+        <label for="annee">Année :</label>
+        <input type="number" id="annee" name="annee" required>
+
+        <button type="submit">Envoyer</button>
+    </form>
+
+</body>
+</html>
 
